--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -14,30 +14,9 @@
 				"uri": "/jetCloud/apps/zjblessons/jblesson02/v01/01.xsodata/",
 				"type": "OData",
 				"settings": {
-					"odataVersion": "2.0",
-					"localUri": "localService/metadata.xml"
+					"odataVersion": "2.0"
 				}
 			}
-		},
-		"sourceTemplate": {
-			"id": "sap.ui.ui5-template-plugin.1worklist",
-			"version": "1.52.7"
-		}
-	},
-	"sap.ui": {
-		"technology": "UI5",
-		"icons": {
-			"icon": "sap-icon://task",
-			"favIcon": "",
-			"phone": "",
-			"phone@2": "",
-			"tablet": "",
-			"tablet@2": ""
-		},
-		"deviceTypes": {
-			"desktop": true,
-			"tablet": true,
-			"phone": true
 		}
 	},
 	"sap.ui5": {
@@ -68,7 +47,11 @@
 			},
 			"": {
 				"dataSource": "mainService",
-				"preload": true
+				"preload": true,
+				"settings": {
+					"defaultCountMode": "None",
+					"defaultBindingMode": "TwoWay"
+				}
 			}
 		},
 		"routing": {
